--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
          <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-               <img src="img/logo.png"> CC&S</a>
+               <img src="img/logo2.png"> CC&S</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
             </button>
@@ -38,6 +38,9 @@
                   </li>
                   <li class="nav-item">
                      <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="http://google.com.br" target="_blank"><i class="fa fa-envelope-o"></i></a>
                   </li>
                </ul>
             </div>
@@ -292,7 +295,7 @@
                      <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                            <label>Telefone</label>
-                           <input class="form-control" id="phone" type="tel" placeholder="(99) 99999 - 9999" required data-validation-required-message="Informe seu nome para que possamos contactá-lo." data-mask="(00) 0000-0000" data-mask-selectonfocus="true">
+                           <input class="form-control" id="phone" type="tel" placeholder="(99) 99999 - 9999" required data-validation-required-message="Informe seu telefone para que possamos contactá-lo." data-mask="(00) 0000-0000" data-mask-selectonfocus="true">
                            <p class="help-block text-danger"></p>
                         </div>
                      </div>
@@ -389,7 +392,7 @@
                         <div class="modal-body">
                            <h2>Direito Civil</h2>
                            <hr class="star-primary">
-                           <img class="img-fluid img-centered d-none d-lg-block" src="img/portfolio/civil.png" alt="">
+                           <img class="img-fluid img-centered d-none d-lg-block" src="img/direito-civil.png" alt="">
                            <p class="text-justify"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sodales libero quis odio ultricies molestie. Nulla vitae elit pulvinar quam laoreet gravida. Pellentesque mattis pulvinar elit, vitae rhoncus purus facilisis ac. Nam rhoncus id dolor et ultricies. Quisque eu neque rutrum, gravida sapien non, placerat lacus. Nulla facilisis mi sed libero posuere, accumsan gravida sapien mattis. Nulla facilisi. Donec ut pulvinar velit. Vestibulum tempus eget arcu ac ornare.
 
                            Maecenas vehicula lorem quis venenatis suscipit. Etiam convallis libero diam, vel accumsan ante molestie vitae. Ut ultricies ipsum at quam elementum aliquam. Ut vitae aliquam ex. Pellentesque nibh metus, fringilla nec euismod nec, accumsan sit amet metus. Duis auctor fringilla augue interdum finibus.
@@ -629,6 +632,7 @@
             </div>
          </div>
       </div>
+      <!-- /. Portfolio Modals -->
       <!-- Bootstrap core JavaScript -->
       <script src="vendor/jquery/jquery.min.js"></script>
       <script src="vendor/popper/popper.min.js"></script>
